# PayconTask

./: README.md  config.py  easy_run.sh  main.py  pyproject.toml  run.py
application/: gtk_app.py  windows.py
csv_example/: Test_base.csv
ui/: MyApplication.glade
